--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
-
-@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Russo+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -67,7 +65,7 @@ input[type="number"] {
     --popover: 226.7 12.7% 13.9%;
     --popover-foreground: 210 40% 98%;
 
-    --primary: 210 40% 98%;
+    --primary: rgb(63, 76, 255);
     --primary-foreground: 222.2 47.4% 11.2%;
 
     --secondary: 226.7 12.7% 17.5%;
