--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@ html,
 body,
 :root {
   height: 100%;
-  @apply bg-neutral-900;
+  background-color: rgb(9, 9, 9);
 }
 
 input::-webkit-outer-spin-button,
@@ -56,13 +56,13 @@ input[type="number"] {
   }
 
   .dark {
-    --background: 226.7 12.7% 13.9%;
+    --background: rgb(9, 9, 9);
     --foreground: 210 40% 98%;
 
-    --card: 226.7 12.7% 13.9%;
+    --card: rgb(9, 9, 9);
     --card-foreground: 210 40% 98%;
 
-    --popover: 226.7 12.7% 13.9%;
+    --popover: rgb(9, 9, 9);
     --popover-foreground: 210 40% 98%;
 
     --primary: rgb(63, 76, 255);
