--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -22,6 +22,27 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 
+.searchbar {
+  @apply flex gap-1 rounded-lg bg-dark-3 px-4 py-2;
+}
+
+.searchbar_input {
+  @apply border-none bg-dark-3 text-[16px] text-light-4 outline-none !important;
+}
+
+/* Account Profile  */
+.account-form_image-label {
+  @apply flex h-24 w-24 items-center justify-center rounded-full bg-dark-4 !important;
+}
+
+.account-form_image-input {
+  @apply cursor-pointer border-none bg-transparent outline-none file:text-[#0095F6] !important;
+}
+
+.account-form_input {
+  @apply border border-dark-4 bg-dark-3 text-light-1 !important;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
