--- a/client/components/drop-file-input/drop-file-input.css
+++ b/client/components/drop-file-input/drop-file-input.css
@@ -1,103 +1,109 @@
 :root {
-    --body-bg: #f5f8ff;
-    --box-bg: #fff;
-    --input-bg: #f5f8ff;
-    --txt-color: #2f2d2f;
-    --txt-second-color: #ccc;
-    --border-color: #4267b2;
-    --box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  --body-bg: #f5f8ff;
+  --box-bg: #fff;
+  --input-bg: #f5f8ff;
+  --txt-color: #2f2d2f;
+  --txt-second-color: #ccc;
+  --border-color: #4267b2;
+  --box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 .drop-file-input {
-    position: relative;
-    width: 400px;
-    height: 200px;
-    border: 2px dashed var(--border-color);
-    border-radius: 20px;
+  position: relative;
+  width: 20rem;
+  height: 10rem;
+  border: 3px dashed var(--border-color);
+  border-radius: 20px;
+  margin: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    background-color: var(--input-bg);
+  background-color: var(--input-bg);
 }
 
 .drop-file-input input {
-    opacity: 0;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-   
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
 }
 
 .drop-file-input:hover,
 .drop-file-input.dragover {
-    opacity: 0.6;
+  opacity: 0.95;
+  scale: 1.01;
+  transition: all 0.3s ease-in-out;
 }
 
 .drop-file-input__label {
-    text-align: center;
-    color: var(--txt-second-color);
-    font-weight: 600;
-    padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: var(--txt-second-color);
+  font-weight: 600;
+  padding: 10px;
 }
 
 .drop-file-input__label img {
-    width: 100px;
+  width: 100px;
 }
 
 .drop-file-preview {
-    margin-top: 30px;
+  color: black;
+  margin-top: 10px;
+  width: auto;
 }
 
 .drop-file-preview p {
-    font-weight: 500;
+  font-weight: 500;
 }
 
 .drop-file-preview__title {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .drop-file-preview__item {
-    position: relative;
-    display: flex;
-    margin-bottom: 10px;
-    background-color: var(--input-bg);
-    padding: 15px;
-    border-radius: 20px;
+  position: relative;
+  display: flex;
+  margin-bottom: 10px;
+  background-color: var(--input-bg);
+  padding: 8px 4px;
+  border-radius: 20px;
+  align-items: center;
+  justify-content: center;
 }
 
 .drop-file-preview__item img {
-    width: 50px;
-    margin-right: 20px;
+  width: 50px;
+  margin-right: 20px;
+  margin-left: 10px;
 }
 
 .drop-file-preview__item__info {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  display: flex;
+  justify-content: center;
+  margin-right: 4rem;
+  /* flex-direction: column;
+  justify-content: space-between; */
 }
 
 .drop-file-preview__item__del {
-    background-color: var(--box-bg);
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    right: 10px;
-    top: 50%;
-    transform: translateY(-50%);
-    box-shadow: var(--box-shadow);
-    cursor: pointer;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-}
-
-.drop-file-preview__item:hover .drop-file-preview__item__del {
-    opacity: 1;
+  background-color: rgba(0, 0, 0, 0.687);
+  color: white;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  box-shadow: var(--box-shadow);
+  cursor: pointer;
 }
